RESOLVED FIXED173262
Activate simulcast through addTransceiver
https://bugs.webkit.org/show_bug.cgi?id=173262
Summary Activate simulcast through addTransceiver
Gustavo Garcia
Reported 2017-06-12 06:24:44 PDT
Overview: I seems like Safari TP 33 has no support for simulcast streaming, which would be required for multiparty scenarios. This is supported in Chrome and Firefox for VP8 and there is a patch in progress to add support also for H.264 [1] The standard way to add simulcast support would be using RtpSender encodings + RID header extensions in the RTP packets [2] Actual Result: There is no way to enable simulcast in Safari for H.264. Expected Result: Safari supports simulcast for H.264 (and also VP8 if support for that is eventually added) Build Date & Hardware: Safari TP 33 on macOS 10.12.5 [1] https://bugs.chromium.org/p/webrtc/issues/detail?id=5840 [2] https://www.w3.org/TR/webrtc/#simulcast-example
Attachments
Patch (17.04 KB, patch)
2021-01-25 00:44 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2017-06-12 08:47:52 PDT
Philip Jägenstedt
Comment 2 2019-02-26 05:39:21 PST
FYI, there's an "Intent to Implement and Ship: Simulcast with PeerConnection AddTranceiver API in WebRTC" for this on blink-dev now: https://groups.google.com/a/chromium.org/d/msg/blink-dev/N31xFKvgbck/h5G0a9RqAQAJ
youenn fablet
Comment 3 2019-02-26 08:33:58 PST
Simulcast activation through munging is supported. The plan is to transition to addTransceiver
youenn fablet
Comment 4 2021-01-25 00:44:49 PST
EWS
Comment 5 2021-01-25 09:12:43 PST
Committed r271797: <https://trac.webkit.org/changeset/271797> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418257 [details].
Note You need to log in before you can comment on or make changes to this bug.